@@ -137,14 +137,17 @@ bool Screen::leave() {
   assert(m_entered == true);
   LOG((CLOG_INFO "leaving screen"));
 
-  if (!m_screen->leave()) {
+  if (!m_screen->canLeave()) {
     return false;
   }
+
   if (m_isPrimary) {
     leavePrimary();
   } else {
     leaveSecondary();
   }
+
+  m_screen->leave();
 
   // make sure our idea of clipboard ownership is correct
   m_screen->checkClipboards();
