@@ -883,6 +883,12 @@ OSXScreen::enter()
 }
 
 bool
+OSXScreen::canLeave()
+{
+	return true;
+}
+
+void
 OSXScreen::leave()
 {
     hideCursor();
@@ -920,8 +926,6 @@ OSXScreen::leave()
 
 	// now off screen
 	m_isOnScreen = false;
-
-	return true;
 }
 
 bool
